# flatsync

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  flake.nix  meson.build  meson_options.txt
.github/workflows/: ci.yml
build-aux/: app.drey.FlatSync.Devel.json  dist-vendor.sh  flatpak-bwrap-wrapper.sh  fusermount-wrapper.sh  polkit-autogen  python-deps.json
data/: app.drey.FlatSync.Autostart.desktop.in.in  app.drey.FlatSync.Daemon.service.in  app.drey.FlatSync.desktop.in.in  app.drey.FlatSync.gschema.xml.in  app.drey.FlatSync.metainfo.xml.in.in  meson.build
data/resources/: meson.build  resources.gresource.xml
data/resources/ui/: preferences.blp  setup-screen.blp  setup-window.blp  setup-window.ui  shortcuts.blp  window.blp  window.ui
docs/: architecture.md
flatsync-cli/: Cargo.toml
flatsync-cli/src/: autostart.rs  commands.rs  init.rs  main.rs  sync.rs  trace.rs
flatsync-daemon/: Cargo.toml
flatsync-daemon/src/: api.rs  context.rs  dbus.rs  error.rs  imp.rs  main.rs  settings.rs  traits.rs
flatsync-daemon/src/data_sinks/: data_sink.rs  data_sink_client.rs  github.rs  mod.rs  oauth_client.rs  rest_client.rs
libflatsync-common/: Cargo.toml
libflatsync-common/src/: config.rs  config.rs.in  diff.rs  error.rs  lib.rs  meson.build  models.rs  raw.rs
libflatsync-common/src/dbus/: daemon_proxy.rs  mod.rs  wrapper_functions.rs
libflatsync-common/src/models/: flatpak_installation.rs  flatpak_installation_kind.rs  flatpak_installation_map.rs  flatpak_installation_payload.rs  flatpak_installation_storage_type.rs  flatpak_ref.rs  flatpak_ref_kind.rs  flatpak_remote.rs  flatpak_remote_type.rs  mod.rs  tx.rs
libflatsync-common/src/providers/: github.rs  mod.rs  oauth_client.rs  providers_list.rs
po/: POTFILES.in
src/: application.rs  main.rs  meson.build  network_state.rs  power_state.rs  preferences.rs  setup_window.rs  window.rs
