[package]
name = "flatsync"
version = "0.1.0"
authors = ["Rasmus Thomsen <oss@cogitri.dev>"]
edition = "2021"

[dependencies]
adw = { version = "0.5", package = "libadwaita", features = ["v1_4"] }
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.7", package = "gtk4" }
libflatsync-common = { path = "libflatsync-common" }
log = "0.4"
once_cell = "1.14"
pretty_env_logger = "0.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
zbus = { version = "3.11.0", default-features = false, features = ["tokio"] }

[workspace]
members = ["libflatsync-common", "flatsync-daemon", "flatsync-cli"]

[profile.release]
lto = true
codegen-units = 1
debug = true
panic = "abort"

[profile.dev]
debug = true
panic = "abort"
