[package]
name = "flatsync-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros"] }
zbus = { version = "3.11.0", default-features = false, features = ["tokio"] }
