[package]
name = "flatsync-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4"
pretty_env_logger = "0.5"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
zbus = { version = "3.11.0", default-features = false, features = ["tokio"] }
serde_json = "1.0"
libflatsync-common = { path = "../libflatsync-common" }
