[package]
name = "flatsync-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
libflatsync-common = { path = "../libflatsync-common" }
log = "0.4"
gio = "0.18"
glib = "0.18"
tracing-subscriber = "0.3.18"
tracing = { version = "0.1.40", features = ["log-always"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
zbus = { version = "3.11.0", default-features = false, features = ["tokio"] }
anyhow = "1"
