[package]
name = "flatsync-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tap = { version = "1.0" }
const_format = "0.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
libflatpak = { version = "0.3.0", features = ["v1_13_3"] }
zbus = { version = "3.11.0", features = ["tokio"], default-features = false }
oo7 = { version = "0.1.0-beta.3", default-features = false, features = [
  "tokio",
  "openssl_crypto",
] }
serde_json = "1"
serde = "1"
reqwest = { version = "0.11", features = [
  "json",
  "native-tls",
], default-features = false }
log = "0.4"
pretty_env_logger = "0.5"
anyhow = "1"
thiserror = "1"
glib = "0.17"
libflatsync-common = { path = "../libflatsync-common" }
diff-struct = "0.5"
ashpd = { version = "0.4.0", default-features = false, features = ["tokio"] }
delegate = "0.10.0"
chrono = { version = "0.4", features = ["serde"] }
