[package]
name = "flatsync-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.72"
anyhow = "1"
ashpd = { version = "0.6", default-features = false, features = ["tokio"] }
chrono = { version = "0.4", features = ["serde"] }
delegate = "0.12"
diff-struct = "0.5"
futures-executor = "0.3.30"
glib = "0.18"
gio = { version = "0.18", features = ["v2_70"] }
libflatpak = { version = "0.4", features = ["v1_13_3"] }
libflatsync-common = { path = "../libflatsync-common" }
log = "0.4"
oauth2 = "4.4.1"
oo7 = { version = "0.2", default-features = false, features = [
  "tokio",
  "openssl_crypto",
] }
pretty_env_logger = "0.5"
reqwest = { version = "0.11", features = [
  "json",
  "native-tls",
], default-features = false }
serde = "1"
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
zbus = { version = "3.11.0", features = ["tokio"], default-features = false }
