[package]
name = "libflatsync-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.72"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
diff_derive = "0.2.3"
diff-struct = "0.5"
libflatpak = { version = "0.4", features = ["v1_13_3"] }
log = "0.4"
oauth2 = "4.4.1"
oo7 = { version = "0.2", default-features = false, features = [
  "tokio",
  "openssl_crypto",
] }
pretty_env_logger = "0.5"
serde = "1"
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
zbus = { version = "3.11.0", default-features = false, features = ["tokio"] }
